# Pascal-interpreter

./: README.md  main.py  pascal.xhtml  pyproject.toml
.github/workflows/: coverage_tests.yaml
interpreter/: ast.py  interpreter.py  lexer.py  parser.py
tests/: test_ast.py  test_interpreter.py  test_lexer.py  test_parser.py
