[tool.poetry]
name = "pascal-interpreter"
version = "0.1.0"
description = ""
authors = ["Fedor Kuznetsov <kuzneczov-f@susanoo.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
coverage = "^7.3.2"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
